# near-passkey-wallet

./: .gitignore  Cargo.toml  NIP46_STATUS.md  README.md  index.html  package-lock.json  package.json  test-session-sig.js  test-wasm-borsh.cjs  test-wasm-borsh.mjs  test_fix.mjs  test_nip44.mjs  tsconfig.json  verify-sig.cjs  vite.config.js  vite.config.ts
public/: connect-popup.html  defuse_wallet.wasm  executor.js  wallet-p256.wasm
relay-cf/: package-lock.json  package.json  test_borsh.mjs  test_compare.mjs  test_hex.mjs  wrangler.toml
relay-cf/src/: debug.js  index.js  wasm-b64.js
scripts/: deploy.sh
src/: App.jsx  NostrBunker.jsx  main.tsx  nip46.js  nostr.js  nostrconnect.js  wallet.js  wasm-borsh.js
src/app/: App.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LogPanel.tsx  Modal.tsx  Screen.tsx  Spinner.tsx  Toast.tsx  index.ts
src/hooks/: index.ts  useBalance.ts  useWallet.tsx
src/lib/: borsh.ts  constants.ts  ethereum.ts  index.ts  near.ts  nearDirect.ts  passkey.ts  relay.ts  session.ts  solana.ts  storage.ts  types.ts  utils.ts
src/nostr/: bunker.ts  crypto.ts  index.ts  nostrconnect.ts  session.ts  types.ts
src/screens/: ConnectScreen.tsx  CreatingScreen.tsx  DashboardScreen.tsx  LoginScreen.tsx  NamingScreen.tsx  SendingScreen.tsx  WelcomeScreen.tsx  index.ts
src/styles/: global.css  tokens.css
src/wallet-wasm/: package.json  wallet_wasm.d.ts  wallet_wasm.js  wallet_wasm_bg.wasm  wallet_wasm_bg.wasm.d.ts
wallet-contract/: Cargo.toml  README.md
wallet-contract/src/: error.rs  events.rs  lib.rs  state.rs
wallet-contract/src/contract/: impl_.rs  mod.rs
wallet-contract/src/request/: ops.rs
wallet-contract/tests/: borsh_encoding_test.rs
wallet-factory/: Cargo.toml
wallet-factory/src/: lib.rs
wallet-wasm/: Cargo.toml
wallet-wasm/src/: lib.rs
wallet-wasm/tests/: encoding_test.rs
