[package]
name = "wallet-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
bs58 = "0.5"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", default-features = false, features = ["hazmat", "fast"] }
wasm-bindgen = "0.2.121"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }